--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-screens": "^2.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.2",
+    "react-navigation-drawer": "^2.4.2",
     "react-navigation-stack": "^2.2.2",
     "react-navigation-tabs": "^2.8.2"
   },
